--- a/index.html
+++ b/index.html
@@ -3,9 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
+
     <title>Bank Tracker</title>
   </head>
   <body>
-    <h1>WELCOME TO BANK TRACKER</h1>
+    <header>
+      <h1 class="text-5xl text-center mt-6">
+        WELCOME TO
+        <span class="font-semibold text-sky-700">BANK TRACKER</span>
+      </h1>
+    </header>
+    <main>
+      <section class="bg-sky-300 w-9/12 mx-auto mt-12 p-8">
+        <h3 class="text-3xl mb-4 font-semibold">PLEASE LOG IN</h3>
+        <div>
+          <input
+            class="w-9/12 block mb-2 px-3"
+            type="email"
+            name=""
+            id=""
+            placeholder="YOUR EMAIL"
+          />
+          <input
+            class="w-9/12 block mb-2 px-3"
+            type="password"
+            name=""
+            id=""
+            placeholder="YOUR PASSWORD"
+          />
+          <button class="bg-fuchsia-400 px-8 py-2 rounded-md">SUBMIT</button>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
