--- a/index.html
+++ b/index.html
@@ -19,22 +19,28 @@
         <h3 class="text-3xl mb-4 font-semibold">PLEASE LOG IN</h3>
         <div>
           <input
-            class="w-9/12 block mb-2 px-3"
+            class="w-9/12 block mb-3 px-3"
             type="email"
             name=""
             id=""
             placeholder="YOUR EMAIL"
           />
           <input
-            class="w-9/12 block mb-2 px-3"
+            class="w-9/12 block mb-3 px-3"
             type="password"
             name=""
             id=""
             placeholder="YOUR PASSWORD"
           />
-          <button class="bg-fuchsia-400 px-8 py-2 rounded-md">SUBMIT</button>
+          <button
+            id="btn-submit"
+            class="bg-fuchsia-600 hover:bg-yellow-600 px-8 py-2 rounded-lg font-medium text-white"
+          >
+            SUBMIT
+          </button>
         </div>
       </section>
     </main>
+    <script src="index.js"></script>
   </body>
 </html>
