event handler added to the button

--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
     </header>
     <main>
       <section class="bg-sky-300 w-9/12 mx-auto mt-12 p-8">
-        <h3 class="text-3xl mb-4 font-semibold">PLEASE LOG IN</h3>
-        <div>
+        <h3 class="text-3xl text-center mb-4 font-semibold">PLEASE LOG IN</h3>
+        <div class="text-center">
           <input
-            class="w-9/12 block mb-3 px-3"
+            class="w-96 mx-auto block mb-5 px-6 py-2"
             type="email"
             name=""
-            id=""
+            id="user-email"
             placeholder="YOUR EMAIL"
           />
           <input
-            class="w-9/12 block mb-3 px-3"
+            class="w-96 mx-auto block mb-5 px-6 py-2"
             type="password"
-            name=""
-            id=""
+            name=" "
+            id="user-password"
             placeholder="YOUR PASSWORD"
           />
           <button
             id="btn-submit"
-            class="bg-fuchsia-600 hover:bg-yellow-600 px-8 py-2 rounded-lg font-medium text-white"
+            class="bg-fuchsia-600 w-96 hover:bg-yellow-600 px-8 py-2 rounded-lg font-medium text-white"
           >
             SUBMIT
           </button>
