added navigation page

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <title>Bank Tracker</title>
+    <title>Bank Manager</title>
   </head>
   <body>
     <header>
       <h1 class="text-5xl text-center mt-6">
         WELCOME TO
-        <span class="font-semibold text-sky-700">BANK TRACKER</span>
+        <span class="font-semibold text-sky-700">BANK MANAGER</span>
       </h1>
     </header>
     <main>
