--- a/bank.html
+++ b/bank.html
@@ -13,6 +13,24 @@
         <span class="font-semibold text-sky-700">MOOOOOOONEYYYYY!!!</span>
       </h1>
     </header>
+    <main>
+      <section class="mt-12">
+        <div class="grid grid-cols-3 gap-4 text-white w-9/12 mx-auto">
+          <div class="bg-green-500 p-12 text-center rounded-xl font-semibold">
+            <h4 class="text-2xl">DEPOSIT</h4>
+            <h2 class="text-5xl">$00</h2>
+          </div>
+          <div class="bg-fuchsia-500 p-12 text-center rounded-xl font-semibold">
+            <h4 class="text-2xl">WITHDRAW</h4>
+            <h2 class="text-5xl">$00</h2>
+          </div>
+          <div class="bg-rose-500 p-12 text-center rounded-xl font-semibold">
+            <h4 class="text-2xl">BALANCE</h4>
+            <h2 class="text-5xl">$1240</h2>
+          </div>
+        </div>
+      </section>
+    </main>
     <script></script>
   </body>
 </html>
