added conntent of  bank html page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           />
           <button
             id="btn-submit"
-            class="bg-fuchsia-600 w-96 hover:bg-yellow-600 px-8 py-2 rounded-lg font-medium text-white"
+            class="bg-neutral-600 w-96 hover:bg-violet-600 px-8 py-2 rounded-lg font-medium text-white"
           >
             SUBMIT
           </button>
