--- a/bank.html
+++ b/bank.html
@@ -14,6 +14,7 @@
       </h1>
     </header>
     <main>
+      <!-- deposit and withdraw section -->
       <section class="mt-12">
         <div class="grid grid-cols-3 gap-4 text-white w-9/12 mx-auto">
           <div class="bg-green-500 p-12 text-center rounded-xl font-semibold">
@@ -27,6 +28,46 @@
           <div class="bg-rose-500 p-12 text-center rounded-xl font-semibold">
             <h4 class="text-2xl">BALANCE</h4>
             <h2 class="text-5xl">$1240</h2>
+          </div>
+        </div>
+      </section>
+
+      <!-- deposit and withdraw input section -->
+      <section class="mt-12">
+        <div class="grid grid-cols-2 gap-4 text-white w-9/12 mx-auto">
+          <div class="bg-teal-500 p-12 text-center rounded-xl font-semibold">
+            <h4 class="text-2xl">PLEASE DEPOSIT</h4>
+            <input
+              class="w-96 mx-auto block mt-2 mb-4 px-6 py-1"
+              type="email"
+              name=""
+              id="user-deposit"
+              placeholder="$ enter your amount to deposit"
+            />
+
+            <button
+              id="btn-submit"
+              class="bg-neutral-600 w-96 hover:bg-violet-600 px-8 py-2 rounded-lg font-medium text-white"
+            >
+              SUBMIT
+            </button>
+          </div>
+          <div class="bg-amber-500 p-12 text-center rounded-xl font-semibold">
+            <h4 class="text-2xl">PLEASE WITHDRAW</h4>
+            <input
+              class="w-96 mx-auto block mt-2 mb-4 px-6 py-1"
+              type="email"
+              name=""
+              id="user-withdraw"
+              placeholder="$ enter your amount to withdraw"
+            />
+
+            <button
+              id="btn-submit"
+              class="bg-neutral-600 w-96 hover:bg-violet-600 px-8 py-2 rounded-lg font-medium text-white"
+            >
+              SUBMIT
+            </button>
           </div>
         </div>
       </section>
