--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <h3 class="text-3xl text-center mb-4 font-semibold">PLEASE LOG IN</h3>
         <div class="text-center">
           <input
-            class="w-96 mx-auto block mb-5 px-6 py-2"
+            class="w-96 mx-auto block mb-5 px-6 py-2 rounded-lg"
             type="email"
             name=""
             id="user-email"
             placeholder="YOUR EMAIL"
           />
           <input
-            class="w-96 mx-auto block mb-5 px-6 py-2"
+            class="w-96 mx-auto block mb-5 px-6 py-2 rounded-lg"
             type="password"
             name=" "
             id="user-password"
